staff dashboad and actions added
